--- a/soso/app/src/main/AndroidManifest.xml
+++ b/soso/app/src/main/AndroidManifest.xml
@@ -22,4 +22,6 @@
         <activity android:name=".Recommend"></activity>
     </application>
 
+    <uses-permission android:name = "android.permission.INTERNET"/>
+    <uses-permission android:name = "android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
