--- a/soso/app/src/main/AndroidManifest.xml
+++ b/soso/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateAlwaysHidden">
         //액티비티 실행시 EditText에 키보드 자동 실행되는것 막기
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,16 +23,16 @@
         </activity>
         <activity android:name=".AddPlan" />
         <activity android:name=".Checklist" />
-        <activity android:name=".Recommend" />
         <activity android:name=".PlanDetail" />
         <activity android:name=".SetDetail" />
         <activity android:name=".joinActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Home" />
+        <!--<activity android:name=".Home" />-->
         <activity
             android:name=".fragment_Recommend"
             android:label="@string/title_activity_fragment__search_result"
             android:theme="@style/AppTheme"></activity>
+
     </application>
 
 </manifest>
