--- a/SignInWithGoogle/app/src/main/AndroidManifest.xml
+++ b/SignInWithGoogle/app/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ahn.signinwithgoogle">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="뚜벅이"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:windowSoftInputMode="stateAlwaysHidden">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".home"></activity>
+        <activity android:name=".AddPlan" />
+        <activity android:name=".Checklist" />
+        <activity android:name=".PlanDetail" />
+        <activity android:name=".SetDetail" />
+        <activity android:name=".Home" />
+        <activity
+            android:name=".fragment_Recommend"
+            android:label="@string/title_activity_fragment__search_result"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
