--- a/SignInWithGoogle/app/build.gradle
+++ b/SignInWithGoogle/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
