--- a/SignInWithGoogle/app/build.gradle
+++ b/SignInWithGoogle/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.github.glomadrian:Grav:1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
