--- a/SignInWithGoogle/app/build.gradle
+++ b/SignInWithGoogle/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.github.glomadrian:Grav:1.1'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
