--- a/SignInWithGoogle/build.gradle
+++ b/SignInWithGoogle/build.gradle
@@ -26,6 +26,7 @@ allprojects {
         maven {
             url "http://dl.bintray.com/glomadrian/maven"
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
