--- a/SignInWithGoogle/app/build.gradle
+++ b/SignInWithGoogle/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.6.1'
     implementation 'com.github.glomadrian:Grav:1.1'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
+    implementation 'com.ssomai:android.scalablelayout:2.1.6'
 }
 
 apply plugin: 'com.google.gms.google-services'
