specific function modify
2018-06-07

--- a/SignInWithGoogle/app/src/main/AndroidManifest.xml
+++ b/SignInWithGoogle/app/src/main/AndroidManifest.xml
@@ -56,8 +56,7 @@
             android:name=".Navigation"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Checklist" />
-        <activity android:name=".checklist_item"></activity>
-        <activity android:name=".SortingByAlgo"></activity>
+        <activity android:name=".Checklist_item"></activity>
     </application>
 
 </manifest>
