--- a/SignInWithGoogle/app/build.gradle
+++ b/SignInWithGoogle/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation 'com.github.glomadrian:Grav:1.1'
     implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'com.ssomai:android.scalablelayout:2.1.6'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
+    //implementation 'com.google.android.gms:play-services-locations:11.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
