--- a/SignInWithGoogle/app/src/main/AndroidManifest.xml
+++ b/SignInWithGoogle/app/src/main/AndroidManifest.xml
@@ -7,11 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <!--
+
     <meta-data
         android:name="com.kakao.sdk.AppKey"
         android:value="3dde7e865dc040ff89b50813840dbc02" />
-    -->
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,6 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAZKHfN10cYPEYS8ecJCb3T2HHlulOa54Q"/>
         <!--
             <activity
             android:name=".AddPlan"
@@ -56,7 +60,8 @@
             android:name=".Navigation"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Checklist" />
-        <activity android:name=".Checklist_item"></activity>
+        <activity android:name=".checklist_item"></activity>
+        <activity android:name=".SortingByAlgo"></activity>
     </application>
 
 </manifest>
