--- a/SignInWithGoogle/app/src/main/AndroidManifest.xml
+++ b/SignInWithGoogle/app/src/main/AndroidManifest.xml
@@ -7,12 +7,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
+    <!--
     <meta-data
         android:name="com.kakao.sdk.AppKey"
         android:value="3dde7e865dc040ff89b50813840dbc02" />
-
-
+    -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -60,7 +59,7 @@
             android:name=".Navigation"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".Checklist" />
-        <activity android:name=".checklist_item"></activity>
+        <activity android:name=".Checklist_item"></activity>
         <activity android:name=".SortingByAlgo"></activity>
     </application>
 
