--- a/SignInWithGoogle/app/src/main/AndroidManifest.xml
+++ b/SignInWithGoogle/app/src/main/AndroidManifest.xml
@@ -6,12 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <!--
-    <meta-data
-        android:name="com.kakao.sdk.AppKey"
-        android:value="3dde7e865dc040ff89b50813840dbc02" />
-    -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +15,7 @@
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="stateAlwaysHidden"
         tools:replace="theme, icon, label">
-        //모듈 라이브러리 사용시 menifest 충돌 병합시켜주는 코드
+        <!--모듈 라이브러리 사용시 menifest 충돌 병합시켜주는 코드-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,34 +26,17 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAZKHfN10cYPEYS8ecJCb3T2HHlulOa54Q"/>
-        <!--
-            <activity
-            android:name=".AddPlan"
-            android:windowSoftInputMode="adjustNothing" />
-        -->
-        <activity
-            android:name=".Checklist_Modify"
-            android:windowSoftInputMode="adjustNothing" />
-        //adjustNothing은 레이아웃이 키보드 영향 안받음
         <activity android:name=".PlanDetail" />
         <activity
             android:name=".SetDetail"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".Home" />
         <activity android:name=".Recommend" />
-        <!-- <activity android:name=".fragment_recom_cultural" /> -->
-        <!-- <activity android:name=".fragment_recom_event" /> -->
-        <!-- <activity android:name=".fragment_recom_course" /> -->
-        <!-- <activity android:name=".fragment_recom_leports" /> -->
-        <!-- <activity android:name=".fragment_recom_accom" /> -->
-        <!-- <activity android:name=".fragment_recom_shopping" /> -->
-        <!-- <activity android:name=".fragment_recom_food" /> -->
         <activity android:name=".MapActivity" />
         <activity
             android:name=".Navigation"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Checklist" />
-        <activity android:name=".Checklist_item"></activity>
+        <activity android:name=".Tutorial"></activity>
         <activity android:name=".SortingByAlgo"></activity>
     </application>
 
